# ChangeLog for x11-libs/libwnck
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.70 2004/12/29 04:25:29 obz Exp $

*libwnck-2.8.1-r1 (29 Dec 2004)

  29 Dec 2004; Mike Gardiner <obz@gentoo.org>
  +files/libwnck-2.8-multimon-tasklist.patch, +libwnck-2.8.1-r1.ebuild:
  New revision, with the multimon-tasklist patch, see bug #70235

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  24 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> libwnck-2.8.1.ebuild:
  Stable on alpha.

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> libwnck-2.8.1.ebuild:
  Stable on hppa.

  21 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org> libwnck-2.8.1.ebuild:
  Stable on sparc

  19 Dec 2004; Mike Gardiner <obz@gentoo.org> libwnck-2.8.1.ebuild:
  Keyworded x86 and ppc for GNOME 2.8.1

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> libwnck-2.8.0.1.ebuild:
  Stable on alpha.

*libwnck-2.8.1 (25 Nov 2004)

  25 Nov 2004; Mike Gardiner <obz@gentoo.org> -libwnck-2.4.0.1-r1.ebuild,
  -libwnck-2.6.0.1.ebuild, -libwnck-2.6.1.ebuild, +libwnck-2.8.1.ebuild:
  New version, removed older versions

  11 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> libwnck-2.8.0.1.ebuild:
  Stable on sparc

  11 Nov 2004; Mike Gardiner <obz@gentoo.org> libwnck-2.8.0.1.ebuild:
  Keyworded ppc for GNOME 2.8

*libwnck-2.8.0.1 (09 Oct 2004)

  09 Oct 2004; foser <foser@gentoo.org> libwnck-2.8.0.1.ebuild :
  bugfix release

  01 Oct 2004; Stephen P. Becker <geoman@gentoo.org> libwnck-2.6.2.1.ebuild:
  stable on mips

*libwnck-2.8.0 (16 Sep 2004)

  16 Sep 2004; foser <foser@gentoo.org> libwnck-2.8.0.ebuild :
  Gnome 2.8 release
  Add doc USE

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  libwnck-2.6.2.1.ebuild:
  Masked libwnck-2.6.2.1.ebuild stable for ppc
