@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libwnck/Attic/libwnck-2.6.2.1.ebuild,v 1.11 2004/11/08 19:32:50 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libwnck/Attic/libwnck-2.6.2.1.ebuild,v 1.12 2005/01/08 23:21:13 slarti Exp $
 
 inherit gnome2 eutils
 
