@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libwnck
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.70 2004/12/29 04:25:29 obz Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.71 2005/01/08 23:21:13 slarti Exp $
+
+  08 Jan 2005; Tom Martin <slarti@gentoo.org> libwnck-2.8.1.ebuild:
+  Stable on amd64.
 
 *libwnck-2.8.1-r1 (29 Dec 2004)
 
